--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-loader": "^6.4.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "postcss-cssnext": "^2.10.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
