--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
     "babel-loader": "^6.4.1",
+    "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "postcss-cssnext": "^2.10.0",
     "react": "^15.5.4",
