--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "style-loader": "^0.15.0",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
