--- a/wercker.yml
+++ b/wercker.yml
@@ -1,18 +1,18 @@
-box: gasbuddy/node-app:wercker
+box: gasbuddy/node-app:wercker-npm5
 
 build:
   steps:
     - script:
       name: install packages
-      code: yarn
+      code: npm
 
     - script:
       name: lint
-      code: yarn lint
+      code: npm run lint
 
     - script:
       name: build
-      code: yarn build
+      code: npm run build
 
 deploy:
   steps:
