--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "1.2.0",
+  "version": "3.0.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -29,28 +29,27 @@
   },
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^1.3.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "redux-logger": "^3.0.1",
-    "style-loader": "^0.15.0",
-    "webpack": "^2.3.3",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.1.1",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.5",
+    "babel-cli": "^6.26.0",
     "babel-preset-gasbuddy": "^2.6.0",
-    "eslint": "^3.1.0",
-    "eslint-config-gasbuddy": "^2"
+    "eslint-config-gasbuddy": "^4.0.0"
   },
   "nyc": {
     "lines": 75,
