--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,7 @@ build:
   steps:
     - script:
       name: install packages
-      code: npm
+      code: npm install
 
     - script:
       name: lint
