--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -44,6 +44,7 @@
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
+    "webpack-manifest-plugin": "^1.3.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
