--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "incstr": "^1.2.3",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
