--- a/package.json
+++ b/package.json
@@ -46,13 +46,15 @@
     "webpack-cli": "^2.0.9",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-manifest-plugin": "andriijas/webpack-manifest-plugin",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
+    "@gasbuddy/react": "^4.0.1",
     "babel-cli": "^6.26.0",
     "babel-preset-gasbuddy": "^3.1.0",
-    "eslint-config-gasbuddy": "^4.1.0"
+    "eslint-config-gasbuddy": "^4.1.0",
+    "tap": "^11.1.1"
   },
   "nyc": {
     "lines": 75,
