--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -39,14 +39,14 @@
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.20.2",
-    "webpack": "^4.0.0",
+    "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "andriijas/webpack-manifest-plugin",
+    "webpack-manifest-plugin": "github:andriijas/webpack-manifest-plugin",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
