--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "7.0.2",
+  "version": "7.1.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -32,7 +32,7 @@
     "babel-loader": "^7.1.3",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "incstr": "^1.2.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
@@ -50,9 +50,9 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
-    "@gasbuddy/react": "^4.0.1",
+    "@gasbuddy/react": "^5.0.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-gasbuddy": "^3.1.1",
+    "babel-preset-gasbuddy": "^3.3.0",
     "eslint-config-gasbuddy": "^4.1.0",
     "tap": "^11.1.1"
   },
