--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "7.2.0",
+  "version": "7.3.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -29,32 +29,32 @@
   },
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "incstr": "^1.2.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.1",
+    "postcss-loader": "^2.1.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-middleware": "^3.0.0",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-middleware": "^3.0.1",
     "webpack-hot-middleware": "^2.21.2",
-    "webpack-manifest-plugin": "github:andriijas/webpack-manifest-plugin",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
     "@gasbuddy/react": "^5.0.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-gasbuddy": "^3.3.0",
+    "babel-preset-gasbuddy": "^3.3.3",
     "eslint-config-gasbuddy": "^4.1.0",
-    "tap": "^11.1.1"
+    "tap": "^11.1.3"
   },
   "nyc": {
     "lines": 75,
