--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "7.5.1",
+  "version": "8.0.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -29,32 +29,32 @@
   },
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "incstr": "^1.2.3",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11",
     "redux-logger": "^3.0.6",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-middleware": "^3.1.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.2",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
-    "@gasbuddy/react": "^5.0.0",
+    "@gasbuddy/react": "^5.1.0",
     "babel-cli": "^6.26.0",
     "babel-preset-gasbuddy": "^3.3.3",
     "eslint-config-gasbuddy": "^4.1.0",
-    "tap": "^11.1.3"
+    "tap": "^12.0.1"
   },
   "nyc": {
     "lines": 75,
