--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "incstr": "^1.2.3",
+    "mini-css-extract-plugin": "^0.4.4",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
