--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^1.0.0",
     "incstr": "^1.2.3",
     "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
@@ -41,6 +42,7 @@
     "react-hot-loader": "^4.3.11",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
