--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-hot-loader": "^4.3.11",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
+    "terser-webpack-plugin": "^1.1.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
