--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/web-dev",
-  "version": "11.0.0",
+  "version": "11.0.1",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
   "module": "src/index.js",
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
+    "@loadable/webpack-plugin": "^5.5.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -48,8 +49,8 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/register": "^7.0.0",
-    "@gasbuddy/react": "^6.3.1",
-    "babel-preset-gasbuddy": "^5.3.2",
+    "@gasbuddy/react": "^7.0.0",
+    "babel-preset-gasbuddy": "^5.4.0",
     "eslint-config-gasbuddy": "^5.1.0",
     "tap": "^12.6.0"
   },
