--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
