--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ci-cover": "nyc check-coverage",
     "ci-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint .",
+    "prepare": "npm run build",
     "prepublish": "npm run build",
     "build": "babel src/ --out-dir build/"
   },
@@ -30,21 +31,21 @@
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
     "@loadable/webpack-plugin": "^5.13.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.7",
-    "webpack": "^4.43.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "generic-names": "^4.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.18",
+    "postcss-import": "^15.0.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "react-refresh": "^0.14.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-hot-middleware": "^2.25.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
