--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "13.0.0",
   "description": "GasBuddy Platform for Web Projects - Dev time dependencies",
   "main": "build/index.js",
-  "module": "src/index.js",
+  "types": "build/index.d.ts",
+  "engines": {
+    "node": ">18.0.0"
+  },
   "scripts": {
-    "test": "tap --node-arg=-r --node-arg=@babel/register tests/test_*.js",
+    "test": "gb-jest",
+    "clean": "yarn dlx rimraf ./build",
     "cover": "cross-env BABEL_ENV=test nyc tap tests/test_*.js && nyc check-coverage",
-    "ci-test": "cross-env NODE_ENV=test nyc tap -Rtap tests/test_*.js | tee .tap_output | tap -Rspec -",
-    "ci-cover": "nyc check-coverage",
-    "ci-coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "eslint .",
-    "prepublish": "npm run build",
-    "build": "babel src/ --out-dir build/"
+    "lint": "eslint src",
+    "prepare": "husky install",
+    "build": "tsc -p tsconfig.build.json"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
     "web",
     "react"
   ],
-  "author": "Max Metral",
+  "author": "GasBuddy",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gas-buddy/web-dev/issues"
@@ -30,8 +31,8 @@
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
     "@loadable/webpack-plugin": "^5.13.0",
-    "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "express": "^4.18.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
@@ -39,6 +40,7 @@
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.7",
+    "ts-loader": "^9.4.4",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
@@ -47,29 +49,27 @@
     "webpack-manifest-plugin": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/register": "^7.10.5",
-    "@gasbuddy/react": "^8.2.0",
-    "babel-preset-gasbuddy": "^6.0.0",
-    "eslint-config-gasbuddy": "^5.3.0",
-    "tap": "^14.10.7"
+    "@gasbuddy/service-tester": "^12.1.1",
+    "@types/express": "^4.17.18",
+    "@types/loadable__webpack-plugin": "^5.7.4",
+    "@types/mini-css-extract-plugin": "^1.4.3",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.6",
+    "@types/terser-webpack-plugin": "^4.2.2",
+    "@types/webpack": "^4.41.34",
+    "@types/webpack-bundle-analyzer": "^4.6.1",
+    "@types/webpack-dev-middleware": "^4.3.0",
+    "@types/webpack-hot-middleware": "^2.25.7",
+    "@types/webpack-manifest-plugin": "^2.1.0",
+    "eslint": "^8.26.0",
+    "eslint-config-gasbuddy": "^7.0.3",
+    "husky": "^8.0.1",
+    "jest": "^29.2.2",
+    "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
-  "nyc": {
-    "lines": 75,
-    "statements": 75,
-    "functions": 75,
-    "branches": 45,
-    "include": [
-      "src"
-    ],
-    "require": [
-      "@babel/register"
-    ],
-    "sourceMap": false,
-    "instrument": false,
-    "reporter": [
-      "text",
-      "lcov"
-    ]
-  }
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "yarn eslint --cache --fix"
+  },
+  "packageManager": "yarn@3.2.4"
 }
