--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/gas-buddy/web-dev#readme",
   "dependencies": {
+    "@gasbuddy/service": "^12.14.3",
     "@loadable/webpack-plugin": "^5.13.0",
     "css-loader": "^3.6.0",
     "express": "^4.18.2",
@@ -50,10 +51,13 @@
   },
   "devDependencies": {
     "@gasbuddy/service-tester": "^12.1.1",
+    "@gasbuddy/react": "^8.2.0",
     "@types/express": "^4.17.18",
     "@types/loadable__webpack-plugin": "^5.7.4",
     "@types/mini-css-extract-plugin": "^1.4.3",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.6",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "@types/terser-webpack-plugin": "^4.2.2",
     "@types/webpack": "^4.41.34",
     "@types/webpack-bundle-analyzer": "^4.6.1",
@@ -65,8 +69,17 @@
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "lint-staged": "^13.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
+  },
+  "peerDependencies": {
+    "@gasbuddy/service": ">= 12.14.3",
+    "express": ">= 4.18.2",
+    "react": ">= 18.2.0",
+    "react-dom": ">= 18.2.0",
+    "webpack": ">= 4.43.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn eslint --cache --fix"
