--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,13 @@
-.idea
 node_modules
-.wercker
 coverage
-.nyc_output
-.tap_output
 test_output.log
-build-static
+__mocks__
+__tests__
+.eslintignore
+.eslintrc
+.nvmrc
+.jest.config.js
+.husky/
+src/
+.vscode/
+.github/
