test: Fix running tests with updated tsconfig

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,15 @@
   "extends": "gasbuddy",
   "parserOptions": {
     "project": "./tsconfig.json"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.ts"
+      ],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
