--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@gasbuddy/service-tester": "^12.1.1",
     "@gasbuddy/react": "^8.2.0",
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
     "@types/loadable__webpack-plugin": "^5.7.4",
     "@types/mini-css-extract-plugin": "^1.4.3",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.6",
