--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,5 +54,6 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "skipLibCheck": true,
     "typeRoots": ["@types/**/*"],
+    "types": ["node", "jest", "@types/jest"],
   }
 }
