--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted-k8s
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
           registry-url: https://registry.npmjs.org/
